# bookclub

./: .gitignore  Dockerfile  pyproject.toml
bookclub/bookclub/: alembic.ini  database.py  main.py  settings.py
bookclub/bookclub/alembic/: env.py
bookclub/bookclub/alembic/versions/: 0ef2e0d84738_add_unique_constraint_to_category_title.py  204238475e74_add_number_of_books_read_to_trophy_table.py  2bb3e78a6cce_make_trophy_year_attribute_nullable_.py  514174b2e149_add_isbn_remove_unique_conatraint_book_.py  8bf99bd7929d_add_trophy_table.py  952f24ca2654_add_allowedemailaddress_table.py  c7afaf41f05d_add_year_to_trophy_table_nullable_true.py  ce85616cf253_inital_script.py  d9118dafb6ad_add_month_to_trophy_table.py
bookclub/bookclub/crud/: crud.py
bookclub/bookclub/models/: models.py
bookclub/bookclub/routers/: ai_recommendations.py  auth.py  bookmarks.py  categories.py  home.py  my_challenge.py  previous_challenges.py  profile.py  statistics.py
bookclub/bookclub/schemas/: schema.py
bookclub/bookclub/services/: category.py  mail.py
bookclub/bookclub/static/: styles.css
bookclub/bookclub/static/js/: all-users.js  all_challenges.js  auth.js  bookmarks,js  challenge.js  latest-submissions.js  profile.js  signup.js  (+3 more)
bookclub/bookclub/templates/: all_challenges.html  bookmarked.html  challenge.html  home.html  leaderboard.html  login.html  newsletter.html  newsletter_welcome.html  profile.html  recommendations.html  signup.html  statistics.html  unsubscribed.html  welcome.html
bookclub/bookclub/utils/: auth.py  categories.py  email.py  leaderboard.py  trophy.py
