[tool.poetry]
name = "bookclub"
version = "0.1.0"
description = "A hobby project to help my bookclub with managing our readings"
authors = ["Friederike Land <me@frieda.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
black = "^24.8.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
authlib = "^1.4.0"
requests = "^2.32.3"
sendgrid = "^6.11.0"
pywhatkit = "^5.4"
twilio = "^9.4.1"
openai = "^1.59.5"
apscheduler = "^3.11.0"
ruff = "^0.9.2"
fastapi = "0.115.6"
starlette = "^0.41"
pydantic-settings = "^2.7.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fastapi dev bookclub/bookclub/main:main"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]

[tool.Ruff.lint.isort]
force-wrap-aliases = true
include_trailing_comma = true
